# SecSemCourseWork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Menu/: Menu.cpp  Menu.h  MenuOption.cpp  MenuOption.h
Sort/: ArraySorter.cpp  ArraySorter.h  ISort.cpp  ISort.h  ResultsHolder.cpp  ResultsHolder.h  runSorts.cpp  runSorts.h
Sort/BubbleSort/: BubbleSort.cpp  BubbleSort.h
Sort/InsertionSort/: InsertionSort.cpp  InsertionSort.h
Sort/QuickSort/: QuickSort.cpp  QuickSort.h
Sort/SelectionSort/: SelectionSort.cpp  SelectionSort.h
Sort/ShellSort/: ShellSort.cpp  ShellSort.h
Tests/: TestCase.cpp  TestCase.h  TestResult.cpp  TestResult.h  runMainTests.cpp  runMainTests.h
Utils/: randomGeneration.h  utils.cpp  utils.h
Utils/Files/: files.cpp  files.h  validation.cpp  validation.h
Utils/Inputs/: inputs.cpp  inputs.h
Utils/Tables/: tables.cpp  tables.h
